--- a/MyHobbies.html
+++ b/MyHobbies.html
@@ -13,6 +13,6 @@
         <li>Coding</li>
         <li>listening music</li>
     </ol>
-    <a href="indexText.html">Retour</a>
+    <a href="index.html">Retour</a>
 </body>
 </html>
